--- a/02-BST/02-BST.vcxproj.filters
+++ b/02-BST/02-BST.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="utf\UnitTestFramework.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="test\BST_answer.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
