--- a/01-Deque/01-Deque.vcxproj.filters
+++ b/01-Deque/01-Deque.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="test\Palindrome.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="test\Deque_answer.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="test\Palindrome_answer.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
